HSF1 HSPA1A interaction paper

--- a/references.bib
+++ b/references.bib
@@ -129,3 +129,46 @@
 	keywords = {Algorithms, {DNA} Primers, Internet, Polymerase Chain Reaction, primer3, Software, Thermodynamics, User-Computer Interface},
 	file = {Volltext:C\:\\Users\\LiTag\\Zotero\\storage\\IU8WCPLX\\Untergasser et al. - 2012 - Primer3--new capabilities and interfaces.pdf:application/pdf},
 }
+
+@article{shpilka_mitochondrial_2018-1,
+	title = {The mitochondrial {UPR}: mechanisms, physiological functions and implications in ageing},
+	volume = {19},
+	rights = {2017 Springer Nature Limited},
+	issn = {1471-0080},
+	url = {https://www.nature.com/articles/nrm.2017.110},
+	doi = {10.1038/nrm.2017.110},
+	shorttitle = {The mitochondrial {UPR}},
+	abstract = {The mitochondrial unfolded protein response ({UPRmt}) is a conserved transcriptional response activated by multiple forms of mitochondrial dysfunction and regulated by mitochondrial-to-nuclear communication.The {UPRmt} promotes cell survival and mitochondrial recovery through metabolic adaptations and a precise mitochondrial biogenesis programme.{UPRmt} activation promotes lifespan extension and protects against bacterial pathogens that perturb mitochondrial function.Prolonged {UPRmt} activation can lead to the propagation of deleterious mitochondrial genomes and mitochondrial damage and can contribute to age-associated organismal deterioration.{UPRmt} manipulations are potential therapeutic targets for treating the vast number of diseases associated with mitochondrial dysfunction.},
+	pages = {109--120},
+	number = {2},
+	journaltitle = {Nature Reviews Molecular Cell Biology},
+	shortjournal = {Nat Rev Mol Cell Biol},
+	author = {Shpilka, Tomer and Haynes, Cole M.},
+	urldate = {2025-01-17},
+	date = {2018-02},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Ageing, Mitochondria, Mitophagy, Stress signalling},
+}
+
+@article{kovacs_hsf1base_2019,
+	title = {{HSF}1Base: A Comprehensive Database of {HSF}1 (Heat Shock Factor 1) Target Genes},
+	volume = {20},
+	rights = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1422-0067},
+	url = {https://www.mdpi.com/1422-0067/20/22/5815},
+	doi = {10.3390/ijms20225815},
+	shorttitle = {{HSF}1Base},
+	abstract = {{HSF}1 (heat shock factor 1) is an evolutionarily conserved master transcriptional regulator of the heat shock response ({HSR}) in eukaryotic cells. In response to high temperatures, {HSF}1 upregulates genes encoding molecular chaperones, also called heat shock proteins, which assist the refolding or degradation of damaged intracellular proteins. Accumulating evidence reveals however that {HSF}1 participates in several other physiological and pathological processes such as differentiation, immune response, and multidrug resistance, as well as in ageing, neurodegenerative demise, and cancer. To address how {HSF}1 controls these processes one should systematically analyze its target genes. Here we present a novel database called {HSF}1Base (hsf1base.org) that contains a nearly comprehensive list of {HSF}1 target genes identified so far. The list was obtained by manually curating publications on individual {HSF}1 targets and analyzing relevant high throughput transcriptomic and chromatin immunoprecipitation data derived from the literature and the Yeastract database. To support the biological relevance of {HSF}1 targets identified by high throughput methods, we performed an enrichment analysis of (potential) {HSF}1 targets across different tissues/cell types and organisms. We found that general {HSF}1 functions (targets are expressed in all tissues/cell types) are mostly related to cellular proteostasis. Furthermore, {HSF}1 targets that are conserved across various animal taxa operate mostly in cellular stress pathways (e.g., autophagy), chromatin remodeling, ribosome biogenesis, and ageing. Together, these data highlight diverse roles for {HSF}1, expanding far beyond the {HSR}.},
+	pages = {5815},
+	number = {22},
+	journaltitle = {International Journal of Molecular Sciences},
+	author = {Kovács, Dániel and Sigmond, Tímea and Hotzi, Bernadette and Bohár, Balázs and Fazekas, Dávid and Deák, Veronika and Vellai, Tibor and Barna, János},
+	urldate = {2025-01-17},
+	date = {2019-01},
+	langid = {english},
+	note = {Number: 22
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {ageing, autophagy, cell adhesion, cell cycle, chromatin remodeling, circadian rhythm, heat shock factor 1, heat shock proteins, heat shock response, ribosome biogenesis},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\G2WRD2PJ\\Kovács et al. - 2019 - HSF1Base A Comprehensive Database of HSF1 (Heat Shock Factor 1) Target Genes.pdf:application/pdf},
+}
