added CRISPaint paper

--- a/references.bib
+++ b/references.bib
@@ -172,3 +172,24 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {ageing, autophagy, cell adhesion, cell cycle, chromatin remodeling, circadian rhythm, heat shock factor 1, heat shock proteins, heat shock response, ribosome biogenesis},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\G2WRD2PJ\\Kovács et al. - 2019 - HSF1Base A Comprehensive Database of HSF1 (Heat Shock Factor 1) Target Genes.pdf:application/pdf},
 }
+
+@article{schmid-burgk_crispaint_2016,
+	title = {{CRISPaint} allows modular base-specific gene tagging using a ligase-4-dependent mechanism},
+	volume = {7},
+	rights = {2016 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/ncomms12338},
+	doi = {10.1038/ncomms12338},
+	abstract = {The site-specific insertion of heterologous genetic material into genomes provides a powerful means to study gene function. Here we describe a modular system entitled {CRISPaint} ({CRISPR}-assisted insertion tagging) that allows precise and efficient integration of large heterologous {DNA} cassettes into eukaryotic genomes. {CRISPaint} makes use of the {CRISPR}-Cas9 system to introduce a double-strand break ({DSB}) at a user-defined genomic location. A universal donor {DNA}, optionally provided as minicircle {DNA}, is cleaved simultaneously to be integrated at the genomic {DSB}, while processing the donor plasmid at three possible positions allows flexible reading-frame selection. Applying this system allows to create C-terminal tag fusions of endogenously encoded proteins in human cells with high efficiencies. Knocking out known {DSB} repair components reveals that site-specific insertion is completely dependent on canonical {NHEJ} ({DNA}-{PKcs}, {XLF} and ligase-4). A large repertoire of modular donor vectors renders {CRISPaint} compatible with a wide array of applications.},
+	pages = {12338},
+	number = {1},
+	journaltitle = {Nature Communications},
+	shortjournal = {Nat Commun},
+	author = {Schmid-Burgk, Jonathan L. and Höning, Klara and Ebert, Thomas S. and Hornung, Veit},
+	urldate = {2025-01-18},
+	date = {2016-07-28},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {{CRISPR}-Cas9 genome editing, Genetic engineering, Non-homologous-end joining},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\DBMW6FRT\\Schmid-Burgk et al. - 2016 - CRISPaint allows modular base-specific gene tagging using a ligase-4-dependent mechanism.pdf:application/pdf},
+}
