added 2a cap dependnt paper

--- a/references.bib
+++ b/references.bib
@@ -29,21 +29,6 @@
 	date = {2024-09-01},
 }
 
-@article{shpilka_mitochondrial_2018,
-	title = {The mitochondrial {UPR}: mechanisms, physiological functions and implications in ageing},
-	volume = {19},
-	issn = {1471-0080},
-	url = {https://doi.org/10.1038/nrm.2017.110},
-	doi = {10.1038/nrm.2017.110},
-	abstract = {The mitochondrial unfolded protein response ({UPRmt}) is a conserved transcriptional response activated by multiple forms of mitochondrial dysfunction and regulated by mitochondrial-to-nuclear communication.The {UPRmt} promotes cell survival and mitochondrial recovery through metabolic adaptations and a precise mitochondrial biogenesis programme.{UPRmt} activation promotes lifespan extension and protects against bacterial pathogens that perturb mitochondrial function.Prolonged {UPRmt} activation can lead to the propagation of deleterious mitochondrial genomes and mitochondrial damage and can contribute to age-associated organismal deterioration.{UPRmt} manipulations are potential therapeutic targets for treating the vast number of diseases associated with mitochondrial dysfunction.},
-	pages = {109--120},
-	number = {2},
-	journaltitle = {Nature Reviews Molecular Cell Biology},
-	shortjournal = {Nature Reviews Molecular Cell Biology},
-	author = {Shpilka, Tomer and Haynes, Cole M.},
-	date = {2018-02-01},
-}
-
 @article{haakonsen_stress_2024,
 	title = {Stress response silencing by an E3 ligase mutated in neurodegeneration},
 	volume = {626},
@@ -130,7 +115,7 @@
 	file = {Volltext:C\:\\Users\\LiTag\\Zotero\\storage\\IU8WCPLX\\Untergasser et al. - 2012 - Primer3--new capabilities and interfaces.pdf:application/pdf},
 }
 
-@article{shpilka_mitochondrial_2018-1,
+@article{shpilka_mitochondrial_2018,
 	title = {The mitochondrial {UPR}: mechanisms, physiological functions and implications in ageing},
 	volume = {19},
 	rights = {2017 Springer Nature Limited},
@@ -192,4 +177,20 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	note = {Publisher: Nature Publishing Group},
 	keywords = {{CRISPR}-Cas9 genome editing, Genetic engineering, Non-homologous-end joining},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\DBMW6FRT\\Schmid-Burgk et al. - 2016 - CRISPaint allows modular base-specific gene tagging using a ligase-4-dependent mechanism.pdf:application/pdf},
+}
+
+@article{furler_recombinant_2001,
+	title = {Recombinant {AAV} vectors containing the foot and mouth disease virus 2A sequence confer efficient bicistronic gene expression in cultured cells and rat substantia nigra neurons},
+	volume = {8},
+	issn = {0969-7128},
+	doi = {10.1038/sj.gt.3301469},
+	abstract = {Recombinant adeno-associated viruses ({rAAVs}) are promising vectors for gene therapy since they efficiently and stably transduce a variety of tissues of immunocompetent animals. The major disadvantage of {rAAVs} is their limited capacity to package foreign {DNA} ({\textless} or =5 kb). Often, co-expression of two or more genes from a single viral vector is desirable to achieve maximal therapeutic efficacy or to track transduced cells in vivo by suitable reporter genes. The internal ribosome entry site ({IRES}) sequence of encephalomyocarditis virus has been widely used to construct bicistronic viral vectors. However, the {IRES} is rather long and {IRES}-mediated translation can be relatively inefficient when compared with cap-dependent translation. As an alternative to the {IRES} for in vivo gene expression, we studied the 16 amino-acid long 2A peptide of foot and mouth disease virus ({FMDV}). The 2A peptide mediates the primary cis-'cleavage' of the {FMDV} polyprotein in a cascade of processing events that ultimately generate the mature {FMDV} proteins. We have generated several different {rAAV} genomes in which two coding regions are fused in-frame via the {FMDV} 2A sequence. We show that {FMDV} 2A efficiently mediates the generation of the expected cleavage products from the artificial fusion proteins in cells. Furthermore, we find that both {EGFP} and alpha- synuclein are expressed at substantially higher levels from 2A vectors than from the corresponding {IRES}-based vectors, while {SOD}-1 is expressed at comparable or slightly higher levels. Finally, we demonstrate for the first time, that the 2A sequence results in effective bicistronic gene expression in vivo after injection of 2A-dependent {rAAVs} into the rat substantia nigra. We conclude that 2A-containing {rAAVs} may represent an attractive alternative to {IRES}-dependent vectors for ex vivo and in vivo gene expression and gene therapy.},
+	pages = {864--873},
+	number = {11},
+	journaltitle = {Gene Therapy},
+	shortjournal = {Gene Ther},
+	author = {Furler, S. and Paterna, J. C. and Weibel, M. and Büeler, H.},
+	date = {2001-06},
+	pmid = {11423934},
+	keywords = {alpha-Synuclein, Animals, Aphthovirus, Blotting, Western, Cells, Cultured, Dependovirus, Gene Expression, Genes, Viral, Genetic Engineering, Genetic Therapy, Genetic Vectors, Green Fluorescent Proteins, Luminescent Proteins, Male, Microscopy, Confocal, Nerve Tissue Proteins, Neurons, Rats, Rats, Wistar, Ribosomes, Substantia Nigra, Synucleins, Transfection},
 }
