Add IRES review

--- a/references.bib
+++ b/references.bib
@@ -194,3 +194,20 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pmid = {11423934},
 	keywords = {alpha-Synuclein, Animals, Aphthovirus, Blotting, Western, Cells, Cultured, Dependovirus, Gene Expression, Genes, Viral, Genetic Engineering, Genetic Therapy, Genetic Vectors, Green Fluorescent Proteins, Luminescent Proteins, Male, Microscopy, Confocal, Nerve Tissue Proteins, Neurons, Rats, Rats, Wistar, Ribosomes, Substantia Nigra, Synucleins, Transfection},
 }
+
+@article{filbin_toward_2009,
+	title = {Toward a structural understanding of {IRES} {RNA} function},
+	volume = {19},
+	issn = {0959-440X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0959440X09000384},
+	doi = {10.1016/j.sbi.2009.03.005},
+	abstract = {Protein synthesis of an {RNA} template can start by two different known mechanisms: cap-dependent translation initiation and cap-independent translation initiation. The latter is driven by {RNA} sequences called internal ribosome entry sites ({IRESs}) that are found in both viral {RNAs} and cellular {mRNAs}. The diverse mechanisms used by {IRESs} are reflected in their structural diversity, and this structural diversity challenges us to develop a cohesive model linking {IRES} function to structure. With more direct structural information available for the viral {IRESs}, data suggest an inverse correlation between the degree to which an {IRES} {RNA} can form a stable structure on its own and the number of factors that it requires to function. Lessons learned from the viral {IRESs} may help understand the cellular {IRESs}, although more structural data are needed before any strong links can be made.},
+	pages = {267--276},
+	number = {3},
+	journaltitle = {Current Opinion in Structural Biology},
+	shortjournal = {Current Opinion in Structural Biology},
+	author = {Filbin, Megan E and Kieft, Jeffrey S},
+	urldate = {2025-01-19},
+	date = {2009-06-01},
+	file = {Akzeptierte Version:C\:\\Users\\LiTag\\Zotero\\storage\\8Y8CSZ2H\\Filbin und Kieft - 2009 - Toward a structural understanding of IRES RNA function.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\KVYUIUK9\\S0959440X09000384.html:text/html},
+}
