add Fessler paper

--- a/references.bib
+++ b/references.bib
@@ -211,3 +211,23 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	date = {2009-06-01},
 	file = {Akzeptierte Version:C\:\\Users\\LiTag\\Zotero\\storage\\8Y8CSZ2H\\Filbin und Kieft - 2009 - Toward a structural understanding of IRES RNA function.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\KVYUIUK9\\S0959440X09000384.html:text/html},
 }
+
+@article{fessler_pathway_2020,
+	title = {A pathway coordinated by {DELE}1 relays mitochondrial stress to the cytosol},
+	volume = {579},
+	rights = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2076-4},
+	doi = {10.1038/s41586-020-2076-4},
+	abstract = {Mitochondrial fidelity is tightly linked to overall cellular homeostasis and is compromised in ageing and various pathologies1–3. Mitochondrial malfunction needs to be relayed to the cytosol, where an integrated stress response is triggered by the phosphorylation of eukaryotic translation initiation factor 2α ({eIF}2α) in mammalian cells4,5. {eIF}2α phosphorylation is mediated by the four {eIF}2α kinases {GCN}2, {HRI}, {PERK} and {PKR}, which are activated by diverse types of cellular stress6. However, the machinery that communicates mitochondrial perturbation to the cytosol to trigger the integrated stress response remains unknown1,2,7. Here we combine genome engineering and haploid genetics to unbiasedly identify genes that affect the induction of C/{EBP} homologous protein ({CHOP}), a key factor in the integrated stress response. We show that the mitochondrial protease {OMA}1 and the poorly characterized protein {DELE}1, together with {HRI}, constitute the missing pathway that is triggered by mitochondrial stress. Mechanistically, stress-induced activation of {OMA}1 causes {DELE}1 to be cleaved into a short form that accumulates in the cytosol, where it binds to and activates {HRI} via its C-terminal portion. Obstruction of this pathway can be beneficial or adverse depending on the type of mitochondrial perturbation. In addition to the core pathway components, our comparative genetic screening strategy identifies a suite of additional regulators. Together, these findings could be used to inform future strategies to modulate the cellular response to mitochondrial dysfunction in the context of human disease.},
+	pages = {433--437},
+	number = {7799},
+	journaltitle = {Nature},
+	author = {Fessler, Evelyn and Eckl, Eva-Maria and Schmitt, Sabine and Mancilla, Igor Alves and Meyer-Bender, Matthias F. and Hanf, Monika and Philippou-Massier, Julia and Krebs, Stefan and Zischka, Hans and Jae, Lucas T.},
+	urldate = {2025-01-19},
+	date = {2020-03},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Mutagenesis, Stress signalling},
+	file = {PubMed Central Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\WZB9DI48\\Fessler et al. - 2020 - A pathway coordinated by DELE1 relays mitochondrial stress to the cytosol.pdf:application/pdf},
+}
