--- a/references.bib
+++ b/references.bib
@@ -231,3 +231,10 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {Mutagenesis, Stress signalling},
 	file = {PubMed Central Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\WZB9DI48\\Fessler et al. - 2020 - A pathway coordinated by DELE1 relays mitochondrial stress to the cytosol.pdf:application/pdf},
 }
+
+@online{noauthor_occurrence_nodate,
+	title = {Occurrence, function and evolutionary origins of ‘2A-like’ sequences in virus genomes {\textbar} Microbiology Society},
+	url = {https://www.microbiologyresearch.org/content/journal/jgv/10.1099/vir.0.83428-0},
+	urldate = {2025-01-19},
+	file = {Occurrence, function and evolutionary origins of ‘2A-like’ sequences in virus genomes | Microbiology Society:C\:\\Users\\LiTag\\Zotero\\storage\\ZCG7M9LX\\vir.0.html:text/html},
+}
