change 2a paper citation to one woth authors

--- a/references.bib
+++ b/references.bib
@@ -232,9 +232,18 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {PubMed Central Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\WZB9DI48\\Fessler et al. - 2020 - A pathway coordinated by DELE1 relays mitochondrial stress to the cytosol.pdf:application/pdf},
 }
 
-@online{noauthor_occurrence_nodate,
-	title = {Occurrence, function and evolutionary origins of ‘2A-like’ sequences in virus genomes {\textbar} Microbiology Society},
+@article{luke_occurrence_2008,
+	title = {Occurrence, function and evolutionary origins of ‘2A-like’ sequences in virus genomes},
+	volume = {89},
+	issn = {1465-2099},
 	url = {https://www.microbiologyresearch.org/content/journal/jgv/10.1099/vir.0.83428-0},
-	urldate = {2025-01-19},
-	file = {Occurrence, function and evolutionary origins of ‘2A-like’ sequences in virus genomes | Microbiology Society:C\:\\Users\\LiTag\\Zotero\\storage\\ZCG7M9LX\\vir.0.html:text/html},
+	doi = {https://doi.org/10.1099/vir.0.83428-0},
+	abstract = {2A is an oligopeptide sequence mediating a ribosome ‘skipping’ effect, producing an apparent ‘cleavage’ of polyproteins. First identified and characterized in picornaviruses, ‘2A-like’ sequences are found in other mammalian viruses and a wide range of insect viruses. Databases were analysed using a motif conserved amongst 2A/2A-like sequences. The newly identified 2A-like sequences (30 aa) were inserted into a reporter polyprotein to determine their cleavage activity. Our analyses showed that these sequences fall into two categories. The majority mediated very high (complete) cleavage to separate proteins and a few sequences mediated cleavage with lower efficiency, generating appreciable levels of the uncleaved form. Phylogenetic analyses of 2A-like sequences and {RNA}-dependent {RNA} polymerases ({RdRps}) indicated multiple, independent, acquisitions of these sequences at different stages during virus evolution. Within a virus family, 2A sequences are (probably) homologous, but diverge due to other evolutionary pressures. Amongst different families, however, 2A/2A-like sequences appear to be homoplasic.},
+	pages = {1036--1042},
+	number = {4},
+	journaltitle = {Journal of General Virology},
+	author = {Luke, Garry A. and de Felipe, Pablo and Lukashev, Alexander and Kallioinen, Susanna E. and Bruno, Elizabeth A. and Ryan, Martin D.},
+	date = {2008},
+	note = {Publisher: Microbiology Society
+Type: Journal Article},
 }
