potential required for mito Import

--- a/references.bib
+++ b/references.bib
@@ -247,3 +247,22 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	note = {Publisher: Microbiology Society
 Type: Journal Article},
 }
+
+@article{martin_role_1991,
+	title = {Role of an energized inner membrane in mitochondrial protein import. Delta psi drives the movement of presequences.},
+	volume = {266},
+	issn = {0021-9258, 1083-351X},
+	url = {https://www.jbc.org/article/S0021-9258(18)55235-2/abstract},
+	doi = {10.1016/S0021-9258(18)55235-2},
+	abstract = {{\textless}p{\textgreater}The transport of precursor proteins into mitochondria requires an energized inner membrane. We report here that the import of various precursor proteins showed a differential sensitivity to treatment of the mitochondria with the uncoupler carbonyl cyanide m-chlorophenylhydrazone. The differential inhibition by carbonyl cyanide m-chlorophenylhydrazone was not influenced by the length of the precursor, the presence of mature protein parts, or the folding state of the precursor but was specific for the presequence. Moreover, only the membrane potential delta psi and not the total proton motive force was required for the transport of precursors, indicating that protein translocation across the inner membrane is not driven by a movement of protons. We conclude that delta psi (negative inside) is needed for the translocation of the positively charged presequences, possibly via an electrophoretic effect.{\textless}/p{\textgreater}},
+	pages = {18051--18057},
+	number = {27},
+	journaltitle = {Journal of Biological Chemistry},
+	shortjournal = {Journal of Biological Chemistry},
+	author = {Martin, J. and Mahlke, K. and Pfanner, N.},
+	urldate = {2025-01-19},
+	date = {1991-09-25},
+	pmid = {1833391},
+	note = {Publisher: Elsevier},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\3SM48V4G\\Martin et al. - 1991 - Role of an energized inner membrane in mitochondrial protein import. Delta psi drives the movement o.pdf:application/pdf},
+}
