--- a/references.bib
+++ b/references.bib
@@ -266,3 +266,19 @@ Type: Journal Article},
 	note = {Publisher: Elsevier},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\3SM48V4G\\Martin et al. - 1991 - Role of an energized inner membrane in mitochondrial protein import. Delta psi drives the movement o.pdf:application/pdf},
 }
+
+@article{gossen_transcriptional_1995,
+	title = {Transcriptional Activation by Tetracyclines in Mammalian Cells},
+	volume = {268},
+	url = {https://www.science.org/doi/10.1126/science.7792603},
+	doi = {10.1126/science.7792603},
+	abstract = {A transcriptional transactivator was developed that fuses the {VP}16 activation domain with a mutant Tet repressor from Escherichia coli. This transactivator requires certain tetracycline (Tc) derivatives for specific {DNA} binding. Thus, addition of doxycycline to {HeLa} cells that constitutively synthesized the transactivator and that contained an appropriate, stably integrated reporter unit rapidly induced gene expression more than a thousandfold. The specificity of the Tet repressor-operator-effector interaction and the pharmacological characteristics of Tc's make this regulatory system well suited for the control of gene activities in vivo, such as in transgenic animals and possibly in gene therapy.},
+	pages = {1766--1769},
+	number = {5218},
+	journaltitle = {Science},
+	author = {Gossen, Manfred and Freundlieb, Sabine and Bender, Gabriele and Müller, Gerhard and Hillen, Wolfgang and Bujard, Hermann},
+	urldate = {2025-01-19},
+	date = {1995-06-23},
+	note = {Publisher: American Association for the Advancement of Science},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\9I3YJHJ8\\Gossen et al. - 1995 - Transcriptional Activation by Tetracyclines in Mammalian Cells.pdf:application/pdf},
+}
