ISR mega review

--- a/references.bib
+++ b/references.bib
@@ -282,3 +282,22 @@ Type: Journal Article},
 	note = {Publisher: American Association for the Advancement of Science},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\9I3YJHJ8\\Gossen et al. - 1995 - Transcriptional Activation by Tetracyclines in Mammalian Cells.pdf:application/pdf},
 }
+
+@article{pakoszebrucka_integrated_2016,
+	title = {The integrated stress response},
+	volume = {17},
+	issn = {1469-221X},
+	url = {https://www.embopress.org/doi/full/10.15252/embr.201642195},
+	doi = {10.15252/embr.201642195},
+	abstract = {In response to diverse stress stimuli, eukaryotic cells activate a common adaptive pathway, termed the integrated stress response ({ISR}), to restore cellular homeostasis. The core event in this pathway is the phosphorylation of eukaryotic translation initiation factor 2 alpha ({eIF}2α) by one of four members of the {eIF}2α kinase family, which leads to a decrease in global protein synthesis and the induction of selected genes, including the transcription factor {ATF}4, that together promote cellular recovery. The gene expression program activated by the {ISR} optimizes the cellular response to stress and is dependent on the cellular context, as well as on the nature and intensity of the stress stimuli. Although the {ISR} is primarily a pro‐survival, homeostatic program, exposure to severe stress can drive signaling toward cell death. Here, we review current understanding of the {ISR} signaling and how it regulates cell fate under diverse types of stress.},
+	pages = {1374--1395},
+	number = {10},
+	journaltitle = {{EMBO} reports},
+	author = {Pakos‐Zebrucka, Karolina and Koryga, Izabela and Mnich, Katarzyna and Ljujic, Mila and Samali, Afshin and Gorman, Adrienne M},
+	urldate = {2025-01-19},
+	date = {2016-10},
+	note = {Num Pages: 1395
+Publisher: John Wiley \& Sons, Ltd},
+	keywords = {activating transcription factor 4, {eIF}2α kinase, eukaryotic translation initiation factor 2 alpha, integrated stress response},
+	file = {PubMed Central Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\C5FFV5PI\\Pakos‐Zebrucka et al. - 2016 - The integrated stress response.pdf:application/pdf},
+}
