non-AUG start codon review

--- a/references.bib
+++ b/references.bib
@@ -301,3 +301,17 @@ Publisher: John Wiley \& Sons, Ltd},
 	keywords = {activating transcription factor 4, {eIF}2α kinase, eukaryotic translation initiation factor 2 alpha, integrated stress response},
 	file = {PubMed Central Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\C5FFV5PI\\Pakos‐Zebrucka et al. - 2016 - The integrated stress response.pdf:application/pdf},
 }
+
+@article{kearse_non-aug_2017,
+	title = {Non-{AUG} translation: a new start for protein synthesis in eukaryotes},
+	volume = {31},
+	url = {https://genesdev.cshlp.org/content/31/17/1717.abstract},
+	doi = {10.1101/gad.305250.117},
+	abstract = {Although it was long thought that eukaryotic translation almost always initiates at an {AUG} start codon, recent advancements in ribosome footprint mapping have revealed that non-{AUG} start codons are used at an astonishing frequency. These non-{AUG} initiation events are not simply errors but instead are used to generate or regulate proteins with key cellular functions; for example, during development or stress. Misregulation of non-{AUG} initiation events contributes to multiple human diseases, including cancer and neurodegeneration, and modulation of non-{AUG} usage may represent a novel therapeutic strategy. It is thus becoming increasingly clear that start codon selection is regulated by many trans-acting initiation factors as well as sequence/structural elements within messenger {RNAs} and that non-{AUG} translation has a profound impact on cellular states.},
+	pages = {1717--1731},
+	number = {17},
+	journaltitle = {Genes \& Development},
+	shortjournal = {Genes \& Development},
+	author = {Kearse, Michael G. and Wilusz, Jeremy E.},
+	date = {2017-09-01},
+}
