GUG-UUG in bacteria

--- a/references.bib
+++ b/references.bib
@@ -315,3 +315,23 @@ Publisher: John Wiley \& Sons, Ltd},
 	author = {Kearse, Michael G. and Wilusz, Jeremy E.},
 	date = {2017-09-01},
 }
+
+@article{asano_why_2014,
+	title = {Why is start codon selection so precise in eukaryotes?},
+	volume = {2},
+	issn = {null},
+	url = {https://doi.org/10.4161/trla.28387},
+	doi = {10.4161/trla.28387},
+	abstract = {Translation generally initiates with the {AUG} codon. While initiation at {GUG} and {UUG} is permitted in prokaryotes (Archaea and Bacteria), cases of {CUG} initiation were recently reported in human cells. The varying stringency in translation initiation between eukaryotic and prokaryotic domains largely stems from a fundamental problem for the ribosome in recognizing a codon at the peptidyl-{tRNA} binding site. Initiation factors specific to each domain of life evolved to confer stringent initiation by the ribosome. The mechanistic basis for high accuracy in eukaryotic initiation is described based on recent findings concerning the role of the multifactor complex ({MFC}) in this process. Also discussed are whether non-{AUG} initiation plays any role in translational control and whether start codon accuracy is regulated in eukaryotes.},
+	pages = {e28387},
+	number = {1},
+	journaltitle = {Translation},
+	author = {Asano, Katsura},
+	urldate = {2025-01-20},
+	date = {2014-01-01},
+	pmid = {26779403},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.4161/trla.28387},
+	keywords = {archaeal translation, bacterial translation, eukaryotic translation, initiation factors, multifactor complex, non-{AUG} initiation, ribosome, start codon fidelity, start codon selection, translation initiation},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\38P4FC4I\\Asano - 2014 - Why is start codon selection so precise in eukaryotes.pdf:application/pdf},
+}
