non-AUG codons in mice

--- a/references.bib
+++ b/references.bib
@@ -335,3 +335,20 @@ Publisher: John Wiley \& Sons, Ltd},
 	keywords = {archaeal translation, bacterial translation, eukaryotic translation, initiation factors, multifactor complex, non-{AUG} initiation, ribosome, start codon fidelity, start codon selection, translation initiation},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\38P4FC4I\\Asano - 2014 - Why is start codon selection so precise in eukaryotes.pdf:application/pdf},
 }
+
+@article{ingolia_ribosome_2011,
+	title = {Ribosome Profiling of Mouse Embryonic Stem Cells Reveals the Complexity and Dynamics of Mammalian Proteomes},
+	volume = {147},
+	issn = {0092-8674},
+	url = {https://www.sciencedirect.com/science/article/pii/S0092867411011925},
+	doi = {10.1016/j.cell.2011.10.002},
+	abstract = {The ability to sequence genomes has far outstripped approaches for deciphering the information they encode. Here we present a suite of techniques, based on ribosome profiling (the deep sequencing of ribosome-protected {mRNA} fragments), to provide genome-wide maps of protein synthesis as well as a pulse-chase strategy for determining rates of translation elongation. We exploit the propensity of harringtonine to cause ribosomes to accumulate at sites of translation initiation together with a machine learning algorithm to define protein products systematically. Analysis of translation in mouse embryonic stem cells reveals thousands of strong pause sites and unannotated translation products. These include amino-terminal extensions and truncations and upstream open reading frames with regulatory potential, initiated at both {AUG} and non-{AUG} codons, whose translation changes after differentiation. We also define a class of short, polycistronic ribosome-associated coding {RNAs} ({sprcRNAs}) that encode small proteins. Our studies reveal an unanticipated complexity to mammalian proteomes.},
+	pages = {789--802},
+	number = {4},
+	journaltitle = {Cell},
+	shortjournal = {Cell},
+	author = {Ingolia, Nicholas T. and Lareau, Liana F. and Weissman, Jonathan S.},
+	urldate = {2025-01-20},
+	date = {2011-11-11},
+	file = {ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\NSFC2IGX\\S0092867411011925.html:text/html},
+}
