--- a/references.bib
+++ b/references.bib
@@ -350,5 +350,25 @@ Publisher: John Wiley \& Sons, Ltd},
 	author = {Ingolia, Nicholas T. and Lareau, Liana F. and Weissman, Jonathan S.},
 	urldate = {2025-01-20},
 	date = {2011-11-11},
-	file = {ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\NSFC2IGX\\S0092867411011925.html:text/html},
+	file = {Akzeptierte Version:C\:\\Users\\LiTag\\Zotero\\storage\\9E7HQ6JK\\Ingolia et al. - 2011 - Ribosome Profiling of Mouse Embryonic Stem Cells Reveals the Complexity and Dynamics of Mammalian Pr.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\NSFC2IGX\\S0092867411011925.html:text/html},
+}
+
+@article{ward_pathobiology_2010,
+	title = {The pathobiology of splicing},
+	volume = {220},
+	rights = {Copyright © 2009 Pathological Society of Great Britain and Ireland. Published by John Wiley \& Sons, Ltd.},
+	issn = {1096-9896},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/path.2649},
+	doi = {10.1002/path.2649},
+	abstract = {Ninety-four percent of human genes are discontinuous, such that segments expressed as {mRNA} are contained within exons and separated by intervening segments, called introns. Following transcription, genes are expressed as precursor {mRNAs} (pre-{mRNAs}), which are spliced co-transcriptionally, and the flanking exons are joined together to form a continuous {mRNA}. One advantage of this architecture is that it allows alternative splicing by differential use of exons to generate multiple {mRNAs} from individual genes. Regulatory elements located within introns and exons guide the splicing complex, the spliceosome, and auxiliary {RNA} binding proteins to the correct sites for intron removal and exon joining. Misregulation of splicing and alternative splicing can result from mutations in cis-regulatory elements within the affected gene or from mutations that affect the activities of trans-acting factors that are components of the splicing machinery. Mutations that affect splicing can cause disease directly or contribute to the susceptibility or severity of disease. An understanding of the role of splicing in disease expands potential opportunities for therapeutic intervention by either directly addressing the cause or by providing novel approaches to circumvent disease processes. Copyright © 2009 Pathological Society of Great Britain and Ireland. Published by John Wiley \& Sons, Ltd.},
+	pages = {152--163},
+	number = {2},
+	journaltitle = {The Journal of Pathology},
+	author = {Ward, Amanda J and Cooper, Thomas A},
+	urldate = {2025-01-20},
+	date = {2010},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/path.2649},
+	keywords = {alternative splicing, disease, exon, gene, intron, {mRNA}, mutations},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\C27FCV8H\\Ward und Cooper - 2010 - The pathobiology of splicing.pdf:application/pdf;Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\VHUS8C4P\\path.html:text/html},
 }
