Leaky scanning kozak

--- a/references.bib
+++ b/references.bib
@@ -389,3 +389,21 @@ Publisher: John Wiley \& Sons, Ltd},
 	date = {2024-01-05},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\HZ76CNR2\\Harrison et al. - 2024 - Ensembl 2024.pdf:application/pdf;Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\QPTM4ZX4\\7416379.html:text/html},
 }
+
+@article{kozak_initiation_1999,
+	title = {Initiation of translation in prokaryotes and eukaryotes},
+	volume = {234},
+	issn = {0378-1119},
+	url = {https://www.sciencedirect.com/science/article/pii/S0378111999002103},
+	doi = {10.1016/S0378-1119(99)00210-3},
+	abstract = {The mechanisms whereby ribosomes engage a messenger {RNA} and select the start site for translation differ between prokaryotes and eukaryotes. Initiation sites in polycistronic prokaryotic {mRNAs} are usually selected via base pairing with ribosomal {RNA}. That straightforward mechanism is made complicated and interesting by cis- and trans-acting elements employed to regulate translation. Initiation sites in eukaryotic {mRNAs} are reached via a scanning mechanism which predicts that translation should start at the {AUG} codon nearest the 5′ end of the {mRNA}. Interest has focused on mechanisms that occasionally allow escape from this first-{AUG} rule. With natural {mRNAs}, three escape mechanisms — context-dependent leaky scanning, reinitiation, and possibly direct internal initiation — allow access to {AUG} codons which, although not first, are still close to the 5′ end of the {mRNA}. This constraint on the initiation step of translation in eukaryotes dictates the location of transcriptional promoters and may have contributed to the evolution of splicing. The binding of Met-{tRNA} to ribosomes is mediated by a {GTP}-binding protein in both prokaryotes and eukaryotes, but the more complex structure of the eukaryotic factor ({eIF}-2) and its association with other proteins underlie some aspects of initiation unique to eukaryotes. Modulation of {GTP} hydrolysis by {eIF}-2 is important during the scanning phase of initiation, while modulating the release of {GDP} from {eIF}-2 is a key mechanism for regulating translation in eukaryotes. Our understanding of how some other protein factors participate in the initiation phase of translation is in flux. Genetic tests suggest that some proteins conventionally counted as eukaryotic initiation factors may not be required for translation, while other tests have uncovered interesting new candidates. Some popular ideas about the initiation pathway are predicated on static interactions between isolated factors and {mRNA}. The need for functional testing of these complexes is discussed. Interspersed with these theoretical topics are some practical points concerning the interpretation of {cDNA} sequences and the use of in vitro translation systems. Some human diseases resulting from defects in the initiation step of translation are also discussed.},
+	pages = {187--208},
+	number = {2},
+	journaltitle = {Gene},
+	shortjournal = {Gene},
+	author = {Kozak, Marilyn},
+	urldate = {2025-01-20},
+	date = {1999-07-08},
+	keywords = {Messenger {RNA}, Protein synthesis, Ribosome, Scanning model, Translation initiation factors},
+	file = {ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\PU6JVBSV\\S0378111999002103.html:text/html},
+}
